# sparse-prefix-caching

./: .dockerignore  Dockerfile  README.md  benchmark_baselines.py  benchmark_e2e.py  diagnose_sdpa.py  docker-compose.yml  fla_intermediate_states_report.md  plan.md  profile_memory.py  pyproject.toml  runall.sh
conf/: config.yaml  config_27b.yaml  large.yaml  medium.yaml  narrativeqa_clean.yaml  narrativeqa_sim.yaml  quality_clean.yaml  quality_sim.yaml  smoke.yaml  system_prompts_clean.yaml  system_prompts_sim.yaml  toy.yaml  toy_gitproject.yaml  toytest.yaml
conf/data/: base.yaml  git_project.yaml  github.yaml  github_targets.yaml  hotpotqa.yaml  muld.yaml  narrativeqa.yaml  nemotron_swe.yaml  osst1.yaml  quality.yaml  sharegpt.yaml  squad.yaml  swe_agent.yaml  synthetic.yaml  system_prompts.yaml  wikipedia.yaml
conf/strategy/: .base.yaml.swp  balanced.yaml  balanced_1.yaml  base.yaml  block.yaml  block_768.yaml  hist_exp_decay.yaml  hist_frozen.yaml  hist_periodic.yaml  kv_only.yaml  log.yaml  log_768.yaml  no_cache.yaml  sqrt.yaml
hybrid_logarithmic_cache/: __init__.py  checkpoint_cache.py
scripts/: .plot_results.py.swp  benchmark_e2e.py  benchmark_single.py  build_dataset.py  discover_github_files.py  fetch_github.py  fetch_wikipedia.py  plot_results.py  prepare_data.py  test_capture_correctness.py
sparse_prefix_caching/: __init__.py  checkpoint_cache.py  patches.py  strategies.py  utils.py
sparse_prefix_caching/datasets/: __init__.py  agentic.py  base.py  git_project.py  github.py  (+10 more)
spase_cache/: checkpoint_cache.py  patches.py  strategies.py  utils.py
(+162 files in other folders)
