[project]
name = "sparse_prefix_caching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<=3.12"
dependencies = [
    "datasets>=4.8.3",
    "fitter",
    "hydra-core>=1.3.2",
    "matplotlib",
    "numpy>=2.2.6",
    "polars",
    "torch==2.11",
    "transformers==5.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
